--- a/httpclients/okhttp/pom.xml
+++ b/httpclients/okhttp/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>com.okta.sdk</groupId>
         <artifactId>okta-sdk-root</artifactId>
-        <version>2.0.0</version>
+        <version>2.0.1-SNAPSHOT</version>
         <relativePath>../..</relativePath>
     </parent>
 
@@ -35,7 +35,7 @@
         <dependency>
             <groupId>com.okta.commons</groupId>
             <artifactId>okta-http-okhttp</artifactId>
-            <version>${otka.commons.version}</version>
+            <version>${okta.commons.version}</version>
         </dependency>
     </dependencies>
 </project>
