--- a/swagger-templates/pom.xml
+++ b/swagger-templates/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>com.okta.sdk</groupId>
         <artifactId>okta-sdk-root</artifactId>
-        <version>2.0.0</version>
+        <version>2.0.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>okta-api-swagger-templates</artifactId>
@@ -49,6 +49,10 @@
                 <exclusion>
                     <groupId>org.slf4j</groupId>
                     <artifactId>slf4j-ext</artifactId>
+                </exclusion>
+                <exclusion>
+                     <groupId>org.apache.httpcomponents</groupId>
+                     <artifactId>httpclient</artifactId>
                 </exclusion>
             </exclusions>
         </dependency>
