--- a/pom.xml
+++ b/pom.xml
@@ -68,12 +68,12 @@
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-sdk-api</artifactId>
-                <version>23.0.1</version>
+                <version>${project.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-sdk-impl</artifactId>
-                <version>23.0.1</version>
+                <version>${project.version}</version>
             </dependency>
 
             <!-- Other Okta Projects -->
