Fix #1568 and #1608: Schema unique property type and DPoP nonce expiration
- Fix #1568: Changed unique property from boolean to string in UserSchemaAttribute and GroupSchemaAttribute to support values like UNIQUE_VALIDATED
- Fix #1608: Added automatic DPoP nonce expiration handling with transparent token refresh
  - DPoPInterceptor now checks nonce on all requests and throws DPoPNonceExpiredException when expired
  - ApiClient automatically catches exception, clears access token, and retries with fresh token/nonce
  - Zero client code changes required - fully backward compatible
- Upgraded Bouncy Castle from 1.78.1 to 1.79 (security fix)
- Improved GroupsIT test reliability with increased retry count and delays

--- a/src/swagger/api.yaml
+++ b/src/swagger/api.yaml
@@ -66328,7 +66328,7 @@ components:
             - $ref: '#/components/schemas/UserSchemaAttributeType'
         unique:
           description: Determines whether property values must be unique
-          type: boolean
+          type: string
           nullable: true
     GroupSchemaBase:
       type: object
@@ -82433,7 +82433,7 @@ components:
             - $ref: '#/components/schemas/UserSchemaAttributeType'
         unique:
           description: Determines whether property values must be unique
-          type: boolean
+          type: string
           nullable: true
       x-okta-allow-null-property-value-for-updates: true
     UserSchemaAttributeEnum:
